src/objects/DFC_DAA_Region__c.object
<CustomObject>
    <description>The list of regions on the DAA Website

South West
South East
London
East of England
East Midlands
West Midlands
Yorkshire and Humber
North West
North East</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAA_Regional_Lead_Del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DAA Regional Lead Delete</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DFC DAA Regions_Del</relationshipLabel>
        <relationshipName>DFC_DAA_Regions_Del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAA_Regional_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DAA Regional Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DFC_DAA_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_name__c</fullName>
        <label>Image name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>DFC DAA Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sequence__c</columns>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>DAA_Regional_Lead__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All DFC Regions</label>
    </listViews>
    <listViews>
        <fullName>Regions_in_England</fullName>
        <columns>Sequence__c</columns>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>DAA_Regional_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>England</value>
        </filters>
        <label>Regions in England</label>
    </listViews>
    <listViews>
        <fullName>Regions_in_Wales</fullName>
        <columns>Country__c</columns>
        <columns>Sequence__c</columns>
        <columns>NAME</columns>
        <columns>DAA_Regional_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Wales</value>
        </filters>
        <label>Regions in Wales</label>
    </listViews>
    <nameField>
        <label>DFC DAA Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DFC DAA Regions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>